--- a/src/app/components/bio/bio.component.css
+++ b/src/app/components/bio/bio.component.css
@@ -1,51 +1,7 @@
-.example-card {
+.container-card {
   max-width: 100%;
-  height: 920px;
+  height: 850px;
   padding-top: 0;
-}
-
-.example-header-image {
-  background-image: url("https://material.angular.io/assets/img/examples/shiba1.jpg");
-  background-size: cover;
-}
-
-/* mat-card { */
-/* background: lightblue; */
-/* } */
-
-.mat-card-image-lg {
-  width: calc(65% + 40px);
-  margin: 0 -24% -0 -24%;
-  position: relative;
-  padding-left: 30px;
-  right: 86px;
-}
-
-.mat-card-image-sm-md {
-  width: calc(50% + 40px);
-  margin: 0 -24% 4% 20%;
-  border-radius: 50%;
-}
-
-.div-mat-card-img {
-  margin: 25px auto;
-  width: max-content;
-}
-
-:host ::ng-deep .mat-card-image {
-  width: calc(60% + 32px);
-  margin: -55px -16px;
-}
-
-.xs-paragraph {
-  /* white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden; */
-}
-
-.header {
-  margin: 0 auto;
-  width: 269px;
 }
 
 .content {
@@ -61,40 +17,86 @@
   height: 58% !important;
 }
 
+.header {
+  margin: 0 auto;
+  width: 269px;
+}
+
+.title {
+  margin-bottom: 7px;
+  font-size: 2.05rem;
+  margin-left: -88px;
+}
+
+.subtitle {
+  color: white;
+  width: 234px;
+  text-align: -webkit-center;
+  margin: 0 -87px;
+  letter-spacing: 2px;
+}
+
 .content-row2-col1 {
-  height: 21% !important;
+  height: 18% !important;
 }
 
-.content-list-tile-md {
-  height: 75%;
+.mat-card-image-lg {
+  width: calc(65% + 40px);
+  margin: 0 -24% -0 -24%;
+  position: relative;
+  padding-left: 30px;
+  right: 86px;
 }
 
-.content-list-tile-xs {
-  height: 75%;
+.para {
+  font-size: 13.5px;
 }
 
-:host ::ng-deep .mat-figure {
-  align-items: baseline;
+.tab {
+  position: absolute;
+  right: 25%;
+  top: 90%;
+}
+
+.tab-btn {
+  text-transform: uppercase;
+  float: left;
+  color: #929292;
+  margin: 0px 10px;
+  letter-spacing: 2px;
+}
+
+.tab-btn:hover {
+  color: white;
+}
+
+.tab-btn:focus {
+  color: #7085d2;
+}
+
+.div-mat-card-img {
+  margin: 25px auto;
+  width: max-content;
 }
 
 .mat-grid-tile-p-xs {
   font-size: 1.25rem;
 }
 
-.mat-card-title {
-  text-align: center;
-  margin-bottom: 0px;
+.example-header-image {
+  background-image: url("https://material.angular.io/assets/img/examples/shiba1.jpg");
+  background-size: cover;
+}
+
+:host ::ng-deep .mat-card-image {
+  width: calc(60% + 32px);
+  margin: -55px -16px;
+}
+
+:host ::ng-deep .mat-figure {
+  align-items: baseline;
 }
 
 :host ::ng-deep .mat-card {
   background: #40404040;
-  /* background: black; */
-}
-
-.bio-tabs {
-  float: left;
-  margin: 13px -1px;
-  width: 25%;
-  height: 60px;
-  border: solid 2px #504f4f;
 }
